syntax = "proto3";

option csharp_namespace = "Generated";

message Name
{
	string Name = 1;
}

message EmptyMessage
{

}
